fixed css alignments for main content and sidebar, various styling tweaks

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -32,7 +32,7 @@
 }
 
 .sticky {
-	border: 2px dashed #ccc;
+	border-bottom: 2px dashed #ccc;
 
 	.entry-title:before {
         font-family: 'Fontawesome';
