--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -73,10 +73,6 @@
 			color: $post-navigation-text-hover;
 		}
 
-		.nav-indicator a {
-			font-weight: 100;
-		}
-
 		.nav-indicator:after {
 			font-family: 'Fontawesome';
 			content: '\f105';
